feat:disable the previous distribution pipeline
Signed-off-by: hgkim <hgkim@openerd.com>

--- a/.github/workflows/dev_deploy_workflow.yml
+++ b/.github/workflows/dev_deploy_workflow.yml
@@ -1,11 +1,7 @@
 name: deploy workflow
 
 on:
-  pull_request:
-    branches:
-      - release
-    types:
-      - closed
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
