feat: update deployment workflow to target release branch instead of main
Signed-off-by: hgkim <hgkim@openerd.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
-# 추후 릴리즈로 변경
-
+      - release
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -52,7 +50,7 @@ jobs:
             else
               cd "$PROJ_DIR"
               git fetch --all
-              git reset --hard origin/main
+              git reset --hard origin/release
               git pull
             fi
 
