--- a/.github/workflows/build_and_health_check.yml
+++ b/.github/workflows/build_and_health_check.yml
@@ -51,61 +51,8 @@ jobs:
             **/build/reports/tests/
             **/build/test-results/
 
-  security-scan:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout code
-        uses: actions/checkout@v4
-
-      - name: setup java 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
-          cache: gradle
-
-      - name: configure 1password
-        uses: 1password/load-secrets-action/configure@v2
-        with:
-          service-account-token: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }}
-
-      - name: load secrets
-        uses: 1password/load-secrets-action@v2
-        with:
-          export-env: true
-          unset-previous: false
-        env:
-          ENV_FILE: op://instance/.env/.env
-
-      - name: create env file
-        run: echo "${{ env.ENV_FILE }}" > .env
-
-      - name: build project
-        run: ./gradlew build -x test
-
-      - name: run security scan
-        uses: dependency-check/Dependency-Check_Action@main
-        with:
-          project: 'profanity-filter-api'
-          path: '.'
-          format: 'HTML'
-          out: 'reports'
-          args: >-
-            --failOnCVSS 7
-            --enableRetired
-        env:
-          JAVA_HOME: /opt/jdk
-
-      - name: upload security report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: security-scan-report
-          path: reports/
-          retention-days: 30
-
   health-check:
-    needs: [ test, security-scan ]
+    needs: [ test ]
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
