--- a/profanity-storage/rdb/src/main/resources/application-rdb.yml
+++ b/profanity-storage/rdb/src/main/resources/application-rdb.yml
@@ -8,3 +8,20 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: validate
+
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        use_sql_comments: true
+logging:
+  level:
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    org.springframework.jdbc.core: DEBUG
