feat: replace profanity-core with profanity-shared in project dependencies

--- a/profanity-domain/build.gradle
+++ b/profanity-domain/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    implementation project(':profanity-core')
+    api project(':profanity-shared')
 
     implementation 'org.springframework:spring-tx'
 
