--- a/profanity-api/src/main/resources/application.yml
+++ b/profanity-api/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       - rdb
       - redis
       - domain
-      - core
+      - shared
   mail:
     host: smtp.gmail.com
     port: 587
