--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'profanity-filter-api'
 
 include('profanity-api')
-include('profanity-core')
+include('profanity-shared')
 include('profanity-domain')
 include('profanity-storage:rdb')
 include('profanity-storage:redis')
