--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "platform"]
-	path = platform
+[submodule "module.platform"]
+	path = module.platform
 	url = https://github.com/Whale0928/k8s-platform.git
