--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "module.platform"]
 	path = module.platform
 	url = https://github.com/Whale0928/k8s-platform.git
+[submodule "module.secrets"]
+	path = module.secrets
+	url = https://github.com/Whale0928/secrets.git
