rename argocd application to profanity-filter

--- a/deploy/application.yaml
+++ b/deploy/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: profanity-production
+  name: profanity-filter
   namespace: argocd
 spec:
   project: default
