--- a/deploy/overlays/production/secret-store.yaml
+++ b/deploy/overlays/production/secret-store.yaml
@@ -8,7 +8,7 @@ spec:
     onepassword:
       connectHost: http://onepassword-connect.external-secrets-system.svc.cluster.local:8080
       vaults:
-        profanity: 1
+        profanity-filter: 1
       auth:
         secretRef:
           connectTokenSecretRef:
