refactor: environment and deployment configuration
Removed Docker Compose setup, added .env and environment JSON files, and updated project documentation to reflect migration to K3S. Security-sensitive adjustments include relocating secrets and modifying .gitignore rules to ensure better secret handling.

--- a/.gitignore
+++ b/.gitignore
@@ -39,7 +39,7 @@ out/
 
 ### VS Code ###
 .vscode/
-/.env
+/module.secrets/.env
 
 # Ignore Gradle build output directory
 build
@@ -55,3 +55,4 @@ application-prod.yml
 
 .secrets
 /http/http-client.env.json
+.omc/
